Fix marquee overflow, grab in image gallery

--- a/styles/Gallery.module.css
+++ b/styles/Gallery.module.css
@@ -1,28 +1,33 @@
 .galleryContainer {
-    margin: auto;
-    padding: 1.2rem 1.8rem 1.2rem 1.8rem;
-    background-color: var(--pink);
-    background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='50' height='50' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(45)'%3E%3Crect width='100%25' height='100%25' fill='rgba(213, 161, 142,1)'/%3E%3Cpath d='M-10 30h60v6h-60zM-10-10h60v6h-60' fill='rgba(237, 219, 199,0.68)'/%3E%3Cpath d='M-10 16h60v4h-60zM-10-24h60v4h-60z' fill='rgba(255, 197, 181,0.34)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
-    background-size: 105%;
-    background-position: center center;
+	margin: auto;
+	padding: 1.2rem 1.8rem 1.2rem 1.8rem;
+	background-color: var(--pink);
+	background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='50' height='50' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(45)'%3E%3Crect width='100%25' height='100%25' fill='rgba(213, 161, 142,1)'/%3E%3Cpath d='M-10 30h60v6h-60zM-10-10h60v6h-60' fill='rgba(237, 219, 199,0.68)'/%3E%3Cpath d='M-10 16h60v4h-60zM-10-24h60v4h-60z' fill='rgba(255, 197, 181,0.34)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
+	background-size: 105%;
+	background-position: center center;
 }
 
 .imageContainer {
-    vertical-align: middle;
-    width: 20rem;
-    background-size: cover;
-    background-position: center center;
-    filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.555));
+	cursor: grab;
+	vertical-align: middle;
+	width: 20rem;
+	background-size: cover;
+	background-position: center center;
+	filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.555));
+}
+
+.imageContainer:active {
+	cursor: grabbing;
 }
 
 @media (max-width: 800px) {
-    .galleryContainer {
-        padding: 0.5rem 1.8rem 0.5rem 1.8rem;
-    }
+	.galleryContainer {
+		padding: 0.5rem 1.8rem 0.5rem 1.8rem;
+	}
 
-    .imageContainer {
-        width: 20rem;
-        background-size: cover;
-        background-position: center center;
-    }
+	.imageContainer {
+		width: 20rem;
+		background-size: cover;
+		background-position: center center;
+	}
 }
